added images to plugins list

--- a/pluginsTab/plugins.css
+++ b/pluginsTab/plugins.css
@@ -5,7 +5,6 @@ body {
 
 #tree {
   padding-top: 10px;
-  max-width: 500px;
 }
 
 .plugin-title {
@@ -13,21 +12,20 @@ body {
   margin-top: 1rem;
   cursor: pointer;
 
-  color: #2c3e50;
+  color: white;
   padding: 4px 8px;
   border-radius: 6px;
   transition: background 0.2s;
 }
 
 .plugin-title:hover {
-  background: #f0f0f0;
+  background: #34495e;
 }
 
 .steps {
   list-style-type: none;
-  margin-left: 1.5rem;
-  padding-left: 0.5rem;
-  /* display: none; */
+
+  display: none;
 }
 
 .steps.visible {
@@ -39,20 +37,34 @@ body {
   padding: 2px 4px;
   margin-top: 4px;
   border-radius: 4px;
-  color: #34495e;
+  color: white;
 }
 
 .step:hover {
-  background: #f2f2f2;
+  background: #34495e;
 }
 
-.filters {
+.images {
+  list-style-type: none;
   margin-left: 1.5rem;
   font-size: 0.9em;
-  color: #555;
+  color: white;
   display: none;
 }
 
-.filters.visible {
+.images.visible {
   display: block;
+}
+
+#header,
+#toggle {
+  margin: 10px;
+}
+
+.plugin-block {
+  background: #6a7e9d;
+  border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  padding: 10px 15px;
+  margin-bottom: 10px;
 }
